# exo

exmples/exo/: avx2_matmul.d  pyproject.toml
exmples/exo/cursors/: cursors.c  cursors.d  cursors.h
exmples/exo/examples/: blur.py  cursors.py  matmul.py  quiz2.py
exmples/exo/quiz1/: quiz1.c  quiz1.d  quiz1.h  quiz1.py
exmples/exo/quiz2/: quiz2.d  quiz2.py
exmples/exo/quiz3/: quiz3.c  quiz3.d  quiz3.h  quiz3.py
