[project]
name = "exo"
version = "0.1.0"
description = ""
authors = [
    {name = "ThemiraChathumina",email = "110608712+ThemiraChathumina@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "exo-lang (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "exo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
